--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
          
           </li>
         </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+        <i class="mobile-nav-toggle d-xl-none bi bi"></i>
       </nav>
     </div>
   </header>
@@ -476,7 +476,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">Linkify</a>
+        Designed by <a">Linkify</a>
       </div>
     </div>
 
